--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -653,7 +653,7 @@ script:
       - lambda: |-
           ESP_LOGI("button", "button %d possibly long pressed, not stopped", button);
           if (millis() - id(button_press_start_time)[button-1] > ${long_press_time}) {
-            esphome::light::AddressableLight* target_led = static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output()); 
+            auto target_led = static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output()); 
             int led_index;
             if (${button_led_feedback_bottom}) {
               switch(${button_count}) {
@@ -706,9 +706,7 @@ script:
             dim_color[1]*(1.0-factor) + original_color.g*factor,
             dim_color[2]*(1.0-factor) + original_color.b*factor
           );
-          //(id(all_leds).get_output())->get(led_index).set(color);
-          auto target_led = static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output());
-          target_led->get(led_index).set(color);
+          static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output())->get(led_index).set(color);
 
 # The lovely ESPHome framework will stop execution of a script, even in parallel mode, if it's called
 # again while the first execution is in a delay. The solution: duplicate this dim script for each
@@ -743,15 +741,13 @@ script:
                   }
                   id(dim_led_internal)->execute(iteration, led_index, is_long_press);
                 }
-                auto target_led = static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output());
-                target_led->schedule_show();
+                static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output())->schedule_show();
             - delay: ${dim_between_led_delay}
       - lambda: 'id(button_press_start_time)[0] = 0;'
 
   - id: dim_led_at_button_2
     mode: restart
     parameters:
-      led_index: int
       is_long_press: bool
     then:
       - delay: ${after_touch_dim_delay}
@@ -759,23 +755,33 @@ script:
           count: 10
           then:
             - lambda: |-
-                auto original_color = id(original_led_color)[led_index-1];
-                auto dim_color = (is_long_press) ? id(long_press_color) : id(touch_color);
-                float factor = iteration * 0.1f;
-                int r = dim_color[0]*(1.0-factor) + original_color.r*factor;
-                int g = dim_color[1]*(1.0-factor) + original_color.g*factor;
-                int b = dim_color[2]*(1.0-factor) + original_color.b*factor;
-                auto target_led = static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output());
-                //ESP_LOGD("button", "Dimming button 2 iteration %d (LED %d) to %d, %d, %d", iteration, led_index, r, g, b);
-                target_led->get(led_index).set(esphome::Color(r, g, b));
-                target_led->schedule_show();
+                int button = 2;
+                int led_index;
+                if (${button_led_feedback_bottom}) {
+                  switch(${button_count}) {
+                    case 4: led_index = 14 - 2*button; break;
+                    case 3: led_index = 13 - 2*button; break;
+                    case 2: led_index = 15 - 4*button; break;
+                    case 1: led_index = 9; break;
+                  }
+                  id(dim_led_internal)->execute(iteration, led_index, is_long_press);
+                }
+                if (${button_led_feedback_top}) {
+                  switch(${button_count}) {
+                    case 4: led_index = 18 + 2*button; break;
+                    case 3: led_index = 19 + 2*button; break;
+                    case 2: led_index = 17 + 4*button; break;
+                    case 1: led_index = 23; break;
+                  }
+                  id(dim_led_internal)->execute(iteration, led_index, is_long_press);
+                }
+                static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output())->schedule_show();
             - delay: ${dim_between_led_delay}
       - lambda: 'id(button_press_start_time)[1] = 0;'
 
   - id: dim_led_at_button_3
     mode: restart
     parameters:
-      led_index: int
       is_long_press: bool
     then:
       - delay: ${after_touch_dim_delay}
@@ -783,23 +789,33 @@ script:
           count: 10
           then:
             - lambda: |-
-                auto original_color = id(original_led_color)[led_index-1];
-                auto dim_color = (is_long_press) ? id(long_press_color) : id(touch_color);
-                float factor = iteration * 0.1f;
-                int r = dim_color[0]*(1.0-factor) + original_color.r*factor;
-                int g = dim_color[1]*(1.0-factor) + original_color.g*factor;
-                int b = dim_color[2]*(1.0-factor) + original_color.b*factor;
-                esphome::light::AddressableLight* target_led = static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output());
-                //ESP_LOGD("button", "Dimming button 3 iteration %d (LED %d) to %d, %d, %d", iteration, led_index, r, g, b);
-                target_led->get(led_index).set(esphome::Color(r, g, b));
-                target_led->schedule_show();
+                int button = 3;
+                int led_index;
+                if (${button_led_feedback_bottom}) {
+                  switch(${button_count}) {
+                    case 4: led_index = 14 - 2*button; break;
+                    case 3: led_index = 13 - 2*button; break;
+                    case 2: led_index = 15 - 4*button; break;
+                    case 1: led_index = 9; break;
+                  }
+                  id(dim_led_internal)->execute(iteration, led_index, is_long_press);
+                }
+                if (${button_led_feedback_top}) {
+                  switch(${button_count}) {
+                    case 4: led_index = 18 + 2*button; break;
+                    case 3: led_index = 19 + 2*button; break;
+                    case 2: led_index = 17 + 4*button; break;
+                    case 1: led_index = 23; break;
+                  }
+                  id(dim_led_internal)->execute(iteration, led_index, is_long_press);
+                }
+                static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output())->schedule_show();
             - delay: ${dim_between_led_delay}
       - lambda: 'id(button_press_start_time)[2] = 0;'
 
   - id: dim_led_at_button_4
     mode: restart
     parameters:
-      led_index: int
       is_long_press: bool
     then:
       - delay: ${after_touch_dim_delay}
@@ -807,16 +823,27 @@ script:
           count: 10
           then:
             - lambda: |-
-                auto original_color = id(original_led_color)[led_index-1];
-                auto dim_color = (is_long_press) ? id(long_press_color) : id(touch_color);
-                float factor = iteration * 0.1f;
-                int r = dim_color[0]*(1.0-factor) + original_color.r*factor;
-                int g = dim_color[1]*(1.0-factor) + original_color.g*factor;
-                int b = dim_color[2]*(1.0-factor) + original_color.b*factor;
-                esphome::light::AddressableLight* target_led = static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output());
-                //ESP_LOGD("button", "Dimming button 4 iteration %d (LED %d) to %d, %d, %d", iteration, led_index, r, g, b);
-                target_led->get(led_index).set(esphome::Color(r, g, b));
-                target_led->schedule_show();
+                int button = 4;
+                int led_index;
+                if (${button_led_feedback_bottom}) {
+                  switch(${button_count}) {
+                    case 4: led_index = 14 - 2*button; break;
+                    case 3: led_index = 13 - 2*button; break;
+                    case 2: led_index = 15 - 4*button; break;
+                    case 1: led_index = 9; break;
+                  }
+                  id(dim_led_internal)->execute(iteration, led_index, is_long_press);
+                }
+                if (${button_led_feedback_top}) {
+                  switch(${button_count}) {
+                    case 4: led_index = 18 + 2*button; break;
+                    case 3: led_index = 19 + 2*button; break;
+                    case 2: led_index = 17 + 4*button; break;
+                    case 1: led_index = 23; break;
+                  }
+                  id(dim_led_internal)->execute(iteration, led_index, is_long_press);
+                }
+                static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output())->schedule_show();
             - delay: ${dim_between_led_delay}
       - lambda: 'id(button_press_start_time)[3] = 0;'
 
@@ -874,17 +901,14 @@ script:
       - delay: ${swipe_between_led_delay}
       - script.execute:
           id: dim_led_at_button_4
-          led_index: 6
           is_long_press: false
       - delay: ${swipe_between_led_delay}
       - script.execute:
           id: dim_led_at_button_3
-          led_index: 8
           is_long_press: false
       - delay: ${swipe_between_led_delay}
       - script.execute:
           id: dim_led_at_button_2
-          led_index: 10
           is_long_press: false
       - delay: ${swipe_between_led_delay}
       - script.execute:
@@ -921,17 +945,14 @@ script:
       - delay: ${swipe_between_led_delay}
       - script.execute:
           id: dim_led_at_button_2
-          led_index: 10
           is_long_press: false
       - delay: ${swipe_between_led_delay}
       - script.execute:
           id: dim_led_at_button_3
-          led_index: 8
           is_long_press: false
       - delay: ${swipe_between_led_delay}
       - script.execute:
           id: dim_led_at_button_4
-          led_index: 6
           is_long_press: false
 
   - id: led_on_full_touch
@@ -951,15 +972,12 @@ script:
           is_long_press: false
       - script.execute:
           id: dim_led_at_button_2
-          led_index: 10
           is_long_press: false
       - script.execute:
           id: dim_led_at_button_3
-          led_index: 8
           is_long_press: false
       - script.execute:
           id: dim_led_at_button_4
-          led_index: 6
           is_long_press: false
       - delay: 5s
       - light.turn_off: leds_top
