--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -489,6 +489,21 @@ media_player:
     i2s_comm_fmt: lsb
     mode: mono
 
+media_player:
+  - platform: speaker
+    name: "Sonoff TX Ultimate Local Speaker"
+    speaker:
+      id: audio_i2s
+      sample_rate: 16000Hz
+      num_channels: 1
+      format: WAV
+
+    files:
+      - id: light_on
+        file: "sounds/on.wav" # Path to your audio file relative to your YAML file
+      - id: light_off
+        file: "sounds/off.wav"  # Another example file
+
 i2s_audio:
   id: audio_i2s
   i2s_lrclk_pin: ${audio_lrclk_pin}
@@ -521,6 +536,8 @@ tx_ultimate_touch:
         auto button = id(button_lookup)[${button_count}-1][touch.x-1];
         ESP_LOGI("button", "translated %d x to button %d", touch.x, button);
         id(led_on_button_press)->execute(button);
+    - media_player.speaker.play_on_device_media_file:
+        media_file: light_on
     - switch.turn_on: vibra
 
   on_release:
