--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -489,8 +489,10 @@ media_player:
     i2s_comm_fmt: lsb
     mode: mono
   - platform: speaker
+    name: ${friendly_name} Speaker
+    id: speaker_media_player
     announcement_pipeline:
-      speaker:
+      speaker: audio_speaker
       id: audio_i2s
       sample_rate: 16000
       num_channels: 1
@@ -533,8 +535,7 @@ tx_ultimate_touch:
         auto button = id(button_lookup)[${button_count}-1][touch.x-1];
         ESP_LOGI("button", "translated %d x to button %d", touch.x, button);
         id(led_on_button_press)->execute(button);
-    - media_player.speaker.play_on_device_media_file:
-        media_file: light_on
+    - media_player.speaker.play_on_device_media_file: light_on
     - switch.turn_on: vibra
 
   on_release:
