--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -194,7 +194,7 @@ globals:
     restore_value: no
     initial_value: ${bar_color}
   - id: button_bar_flipper
-    type: uint8_t[4]
+    type: int8_t[4]
     restore_value: no
     initial_value: '{1, 1, 1, 1}'
   - id: button_bar_brightness
@@ -693,11 +693,11 @@ script:
             int bar_height = id(button_bar_brightness)[button-1];
             while (id(button_held)) {
               if (bar_height == 7) {
-                id(button_bar_flipper) = -1;
+                id(button_bar_flipper)[button-1] = -1;
               } else if (bar_height == 0) {
-                id(button_bar_flipper) = 1;
+                id(button_bar_flipper)[button-1] = 1;
               }
-              bar_height+=id(button_bar_flipper);
+              bar_height+=id(button_bar_flipper)[button-1];
               for (int i=0; i<bar_height; i++) {
                 target_led->get(13+i).set(esphome::Color(id(bar_color)[0], id(bar_color)[1], id(bar_color)[2]));
                 if (i==7) {
@@ -708,7 +708,7 @@ script:
               }
               target_led->schedule_show();
               id(vibra).turn_on();
-              delay(bar_delay);
+              delay(id(bar_delay));
             }
             id(button_bar_brightness)[button-1] = bar_height;
           }
