--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -189,6 +189,10 @@ globals:
     type: int [3]
     restore_value: no
     initial_value: ${touch_color}
+  - id: bar_delay
+    type: int
+    restore_value: no
+    initial_value: 200
   - id: bar_color
     type: int [3]
     restore_value: no
