--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -26,7 +26,7 @@ substitutions:
   touch_effect: "Scan"
 
   bar_color: "{80,70,0}"
-  bar_delay: 200
+  bar_delay: "200"
 
   very_long_press_brightness: "1"
   very_long_press_color: "{0,100,0}"
