--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -631,6 +631,36 @@ sun:
   longitude: ${longitude}
 
 script:
+  - id: bars
+    mode: restart
+    parameters:
+      button: int
+    then:
+      - repeat:
+          count: 100
+          then:
+            - lambda: |-
+                int bar_height = id(button_bar_brightness)[button-1];
+                ESP_LOGI("button", "button %d bar adjusting %d, height is %d", button, id(button_bar_flipper)[button-1], bar_height);
+                if (bar_height == 7) {
+                  id(button_bar_flipper)[button-1] = -1;
+                } else if (bar_height == 0) {
+                  id(button_bar_flipper)[button-1] = 1;
+                }
+                id(button_bar_brightness)[button-1]+=id(button_bar_flipper)[button-1];
+                auto target_led = static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output()); 
+                for (int i=0; i<bar_height; i++) {
+                  target_led->get(13+i).set(esphome::Color(id(bar_color)[0], id(bar_color)[1], id(bar_color)[2]));
+                  if (i==7) {
+                    target_led->get(27).set(esphome::Color(id(bar_color)[0], id(bar_color)[1], id(bar_color)[2]));
+                  } else {
+                    target_led->get(5-i).set(esphome::Color(id(bar_color)[0], id(bar_color)[1], id(bar_color)[2]));
+                  }
+                }
+                target_led->schedule_show();
+                id(vibra).turn_on();
+            - delay: ${bar_delay}
+
   - id: led_on_button_press
     mode: parallel
     parameters:
@@ -692,36 +722,6 @@ script:
             id(vibra).turn_on();
             id(bars)->execute(button);
           }
-
-  - id: bars
-    mode: restart
-    parameters:
-      button: int
-    then:
-      - repeat:
-          count: 100
-          then:
-            - lambda: |-
-                int bar_height = id(button_bar_brightness)[button-1];
-                ESP_LOGI("button", "button %d bar adjusting, height is %d", button, bar_height);
-                if (bar_height == 7) {
-                  id(button_bar_flipper)[button-1] = -1;
-                } else if (bar_height == 0) {
-                  id(button_bar_flipper)[button-1] = 1;
-                }
-                id(button_bar_brightness)[button-1]+=id(button_bar_flipper)[button-1];
-                auto target_led = static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output()); 
-                for (int i=0; i<bar_height; i++) {
-                  target_led->get(13+i).set(esphome::Color(id(bar_color)[0], id(bar_color)[1], id(bar_color)[2]));
-                  if (i==7) {
-                    target_led->get(27).set(esphome::Color(id(bar_color)[0], id(bar_color)[1], id(bar_color)[2]));
-                  } else {
-                    target_led->get(5-i).set(esphome::Color(id(bar_color)[0], id(bar_color)[1], id(bar_color)[2]));
-                  }
-                }
-                target_led->schedule_show();
-                id(vibra).turn_on();
-            - delay: ${bar_delay}
 
   - id: led_on_button_press_internal
     mode: parallel
